# eagraph

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  MILESTONES.md  README.ja.md  README.md
.github/workflows/: ci.yml  release.yml
agent/: eagraph-explorer.md
crates/eagraph-cli/: Cargo.toml
crates/eagraph-cli/src/: config_loader.rs  grammar_builder.rs  indexer.rs  main.rs  viz.rs
crates/eagraph-cli/tests/: e2e_index.rs
crates/eagraph-cli/web/: app.js  index.html  style.css
crates/eagraph-core/: Cargo.toml
crates/eagraph-core/src/: config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/eagraph-crossref/: Cargo.toml
crates/eagraph-mcp/: Cargo.toml
crates/eagraph-parser/: Cargo.toml  build.rs
crates/eagraph-parser/src/: extractor.rs  grammar.rs  lib.rs  symbol_id.rs  tests.rs
crates/eagraph-retriever/: Cargo.toml
crates/eagraph-retriever/src/: lib.rs  snippet.rs
crates/eagraph-store-sqlite/: Cargo.toml
crates/eagraph-store-sqlite/sql/: branch_schema.sql
crates/eagraph-store-sqlite/sql/queries/: delete_file_data.sql  get_annotations.sql  get_file_record.sql  get_neighbors_both.sql  get_neighbors_incoming.sql  get_neighbors_outgoing.sql  get_shortest_path.sql  search_symbols.sql  search_symbols_with_kind.sql  upsert_annotation.sql  upsert_edge.sql  upsert_file_record.sql  upsert_symbol.sql
crates/eagraph-store-sqlite/src/: graph_store.rs  lib.rs  sql.rs  tests.rs
grammars/: bash.scm  bash.toml  c.scm  c.toml  c_sharp.scm  c_sharp.toml  cpp.scm  cpp.toml  elixir.scm  elixir.toml  go.scm  go.toml  haskell.scm  haskell.toml  java.scm  java.toml  javascript.scm  javascript.toml  kotlin.scm  kotlin.toml  lua.scm  lua.toml  php.scm  php.toml  python.scm  python.toml  registry.toml  ruby.scm  ruby.toml  rust.scm  rust.toml  scala.scm  scala.toml  swift.scm  swift.toml  typescript.scm  typescript.toml  zig.scm  zig.toml
scripts/: release.sh
skill/: SKILL.md
tests/fixtures/: config.toml
tests/fixtures/sample-repo/src/: models.py  processor.py  utils.py
