[workspace]
members = [
    "crates/eagraph-core",
    "crates/eagraph-store-sqlite",
    "crates/eagraph-parser",
    "crates/eagraph-crossref",
    "crates/eagraph-retriever",
    "crates/eagraph-mcp",
    "crates/eagraph-cli",
]
resolver = "2"

[workspace.package]
version = "1.1.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
eagraph-core = { path = "crates/eagraph-core" }
eagraph-store-sqlite = { path = "crates/eagraph-store-sqlite" }
eagraph-parser = { path = "crates/eagraph-parser" }
eagraph-crossref = { path = "crates/eagraph-crossref" }
eagraph-retriever = { path = "crates/eagraph-retriever" }
eagraph-mcp = { path = "crates/eagraph-mcp" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
tree-sitter = "0.25"
ignore = "0.4"
indicatif = "0.17"
rayon = "1"
libloading = "0.9"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "6"
glob = "0.3"
sha2 = "0.10"
tiny_http = "0.12"

[profile.release]
strip = true
lto = "thin"
