[package]
name = "eagraph-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "eagraph"
path = "src/main.rs"

[dependencies]
eagraph-core = { workspace = true }
eagraph-store-sqlite = { workspace = true }
eagraph-parser = { workspace = true }
eagraph-crossref = { workspace = true }
eagraph-retriever = { workspace = true }
eagraph-mcp = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
glob = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
eagraph-core = { workspace = true }
eagraph-store-sqlite = { workspace = true }
eagraph-parser = { workspace = true }
glob = { workspace = true }
sha2 = { workspace = true }
